WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260744
[Cocoa] Font's objectForEqualityCheck() is no longer necessary
https://bugs.webkit.org/show_bug.cgi?id=260744
Summary
[Cocoa] Font's objectForEqualityCheck() is no longer necessary
Myles C. Maxfield
Reported
2023-08-25 16:01:32 PDT
[Cocoa] objectForEqualityCheck() is no longer necessary
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-08-25 16:01:52 PDT
<
rdar://problem/114474905
>
Myles C. Maxfield
Comment 2
2023-08-25 16:05:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17088
EWS
Comment 3
2023-08-25 18:21:08 PDT
Committed
267312@main
(dc989b3ef737): <
https://commits.webkit.org/267312@main
> Reviewed commits have been landed. Closing PR #17088 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug