[Cocoa] objectForEqualityCheck() is no longer necessary https://bugs.webkit.org/show_bug.cgi?id=260744 rdar://114474905

Reviewed by Cameron McCormack.

We originally used objectForEqualityCheck() because CFEqual() on fonts was a shallow
pointer comparison. It is possible to generate 2 different font objects (with different
addresses) which represent the same font, so we handled this by generating a derived
object (a "reference URL") for each font, and compared that instead. However, CFEqual()
now performs a deep comparison on fonts on all Cocoa OSes we ship on.

No test because there is no behavior change.

* Source/WebCore/platform/graphics/FontPlatformData.h:
* Source/WebCore/platform/graphics/coretext/FontPlatformDataCoreText.cpp:
(WebCore::FontPlatformData::objectForEqualityCheck): Deleted.
(WebCore::FontPlatformData::objectForEqualityCheck const): Deleted.
* Source/WebCore/platform/graphics/mac/ComplexTextControllerCoreText.mm:
(WebCore::ComplexTextController::collectComplexTextRunsForCharacters):

Canonical link: https://commits.webkit.org/267312@main